tests/diag/surface-collision.err
tests/diag/surface-collision.id:4:1: error: surface '<+>' from 'Exporter#14a4c7925761ac2d' is already active in this context; activating 'Exporter2#4095e9411c76ac8a' would conflict
  while activating 'Exporter2' (tests/diag/surface-collision.id:4:1)
